--- a/bulk-mail-ui/src/app/main/send-mail/send-mail.component.scss
+++ b/bulk-mail-ui/src/app/main/send-mail/send-mail.component.scss
@@ -1,3 +1,21 @@
 .send-mail-container{
     min-height: 80vh;
 }
+
+.recipient-item{
+    background-color: #13101c;
+    height: 40px;
+    color: white;
+    padding: 10px 20px;
+    margin: 10px 5px;
+    border-radius: 20px;
+}
+
+#staticEmail2{
+    width: 200px;
+}
+
+.recpt-form{
+    display: flex;
+    align-items: center;
+}
