--- a/bulk-mail-ui/src/app/main/top-menu/top-menu.component.html
+++ b/bulk-mail-ui/src/app/main/top-menu/top-menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary" style="z-index: auto;">
     <div class="container-fluid">
       <a class="navbar-brand text-primary" href="#">MailManager</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
