create mail list page

--- a/bulk-mail-ui/src/app/main/sent-mails/sent-mails.component.scss
+++ b/bulk-mail-ui/src/app/main/sent-mails/sent-mails.component.scss
@@ -1,3 +1,14 @@
 .sent-mails-container{
     min-height: 80vh;
 }
+
+#mail-body-text {
+    height: 1.2rem;
+    // background-color: red;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.body-td{
+    max-width: 60vw;
+}
