--- a/bulk-mail-ui/src/app/main/top-menu/top-menu.component.html
+++ b/bulk-mail-ui/src/app/main/top-menu/top-menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary" style="z-index: auto;">
+<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand text-primary" href="#">MailManager</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +25,7 @@
                 Mail Menu
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" routerLink="/sent-mails">Sent Mails(Immediate)</a></li>
+                <li><a class="dropdown-item" routerLink="/sent-mails">Sent Mails</a></li>
                 <li><a class="dropdown-item" href="#">Scheduled Mails</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" routerLink="/send-mail">Send Mail (Immediate)</a></li>
