--- a/bulk-mail-ui/src/app/main/sent-mails/sent-mails.component.html
+++ b/bulk-mail-ui/src/app/main/sent-mails/sent-mails.component.html
@@ -1,3 +1,44 @@
 <div class="sent-mails-container">
-    <p>sent-mails works!</p>
+    <div class="card">
+        <div class="card-header">
+            <h3 class="text-center">Sent Mails</h3>
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th style="max-width: 30px;"></th>
+                            <th>Subject</th>
+                            <th>Body</th>
+                            <th>Mail Type</th>
+                            <th>Mail Status</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @for (item of mailLogs; track item.mailId; let idx = $index) {
+                            <tr>
+                               <td>{{ idx + 1}}</td>
+                               <td>{{item.subject}}</td>
+                               <td class="body-td">
+                                <div [innerHTML]="item.body" id="mail-body-text"></div>
+                               </td>
+                               <td>{{item.mailTypeString}}</td>
+                               <td>{{item.mailStatusString}}</td>
+                               <td>
+                                <button class="btn btn-secondary">
+                                    View Mail
+                                </button>
+                               </td>
+                            </tr>
+                        } @empty {
+                        
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <br>
 </div>
