--- a/bulk-mail-ui/src/app/main/sent-mails/sent-mails.component.html
+++ b/bulk-mail-ui/src/app/main/sent-mails/sent-mails.component.html
@@ -1,6 +1,6 @@
 <div class="sent-mails-container">
     <div class="card">
-        <div class="card-header">
+        <div class="card-header bg-primary text-white">
             <h3 class="text-center">Sent Mails</h3>
         </div>
         <div class="card-body">
