--- a/bulk-mail-ui/src/app/main/schedule-mail/schedule-mail.component.scss
+++ b/bulk-mail-ui/src/app/main/schedule-mail/schedule-mail.component.scss
@@ -1,3 +1,27 @@
 .schedule-mail-container{
     min-height: 80vh;
 }
+
+.recipient-item{
+    background-color: #13101c;
+    height: 40px;
+    color: white;
+    padding: 10px 20px;
+    margin: 10px 5px;
+    border-radius: 20px;
+}
+
+#staticEmail2{
+    width: 200px;
+}
+
+.mail-list{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.recpt-form{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
