--- a/bulk-mail-ui/src/app/main/top-menu/top-menu.component.html
+++ b/bulk-mail-ui/src/app/main/top-menu/top-menu.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand text-primary" href="#">MailManager</a>
+      <a class="navbar-brand text-primary" routerLink="/">MailManager</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -49,7 +49,7 @@
                 <mat-icon>more_vert</mat-icon>
               </button>
               <mat-menu #menu="matMenu">
-                <button mat-menu-item>
+                <button (click)="goToProfile()" mat-menu-item>
                   <mat-icon class="text-info">person</mat-icon>
                   <span>Profile</span>
                 </button>
