--- a/bulk-mail-ui/src/app/auth/components/register/register.component.scss
+++ b/bulk-mail-ui/src/app/auth/components/register/register.component.scss
@@ -12,6 +12,13 @@
     justify-content: center;
 }
 
+input::-ms-reveal, input::-ms-clear {
+    display: none;
+    width: 0;
+    height: 0;
+}
+
+
 @media only screen and (max-width: 768px) {
     /* .menu-icon {
         display: block;
